Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19983

Setting a cancel button on QProgressDialog more than once causes layout to be invalid

    XMLWordPrintable

Details

    • Linux/X11
    • 6c3d51e05305f164174e6544a6641b1b4c98fffc (qt/qtbase/6.1) 777053cfff40570282e861527e0e52e22a359629 (qt/tqtc-qtbase/6.2)

    Description

      The attached test project demonstrates a bug where, every time after the first show() of a progress dialog, and only if setCancelButton() is called every time before show(), the button is shown at the top-left corner (on top of everything else) instead of (I presume it's normally inside a layout) at the bottom-right.

      Steps to reproduce:

      • run attached project
      • click test button to show progress dialog
      • click cancel button
      • click test button again
      • cancel button now shows up in the wrong place

      Workaround:

      Resize the window after it's shown. The cancel button moves to the correct location.

      The attached picture "first-show" is what is observed when the test button is clicked once. The "second-show" image is what is seen after clicking the button a second time.

      Attachments

        1. first-show.png
          first-show.png
          13 kB
        2. second-show.png
          second-show.png
          13 kB
        3. untitled.zip
          2 kB
        4. untitled-qt6.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            bparker Brad Parker
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes